# ChangeLog for dev-java/maven-model
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  02 Jun 2007; kiorky <kiorky@cryptelium.net> maven-model-2.0.ebuild:
  moving to JAVA_MAVEN_CLASSPATH

  29 May 2007; kiorky <kiorky@cryptelium.net> maven-model-2.0.ebuild:
  Adding maven bootstrap flag

  27 May 2007; kiorky <kiorky@cryptelium.net> files/build-2.0.xml:
  fix build.xml

  19 May 2007; Alistair John Bush <ali_bush@gentoo.org>
  maven-model-2.0.ebuild:
  Adding to ~amd64, Restricted tests

  01 May 2007; kiorky <kiorky@cryptelium.net> +maven-model-2.0.6.ebuild,
  +files/build-2.0.6.xml, +metadata.xml:
  Added as a maven dependency, #177480
