@@ -1,6 +1,6 @@
 AUX build-2.0.xml 5732 RMD160 38ecfaf80187f53d67bf71028c1dd8357f528f1b SHA1 6312158de2d7c4546c3e9f79d87e9d834a45f3dd SHA256 057a0a56d43facf68fd5c365bee545fe91d655bdaae3d7c237df61def22d6906
-DIST maven-model-2.0.tar.bz2 20838 RMD160 fb66d6eca47db3bcc7b0274319e54ab09bb23830 SHA1 44a625b9c1d82b4cf810d623e09b9b6249515a34 SHA256 efe5a517f9bb8da4169908bd00c48522fc198226ee2357161683ae18de9fd623
-DIST maven-model-gen-src-2.0.tar.bz2 29787 RMD160 518b41b3097df783462238a3f0c351ba594ca2ab SHA1 ca0e39962e16b0603b7cf24cdace1e89c555906c SHA256 b94e8cd4ea151a6a42edda159da2bdba427bb761f64fbdb47443fadee349f0d7
-EBUILD maven-model-2.0.ebuild 590 RMD160 78d0cf091079c518c746e46a95608cd16abfc4be SHA1 0990fa7591f8cea99d3cf709aa6cb28fa41f252c SHA256 f1107e61a78f1dbfab965dda28e302c82bf6ed2fe9b7ca5bdf22344de16b2ab5
-MISC ChangeLog 684 RMD160 12b3dac273ac611cdf1e1b46471e93bf8be1a172 SHA1 a7dd016bf47bf12f950148b59f68826fb3aebeb6 SHA256 c2c8444bc18dc1ef98b1d0b8acfeef1fa5852e3cf390239ec03a5a9cfe3dc58f
+DIST maven-model-2.1_pre20070611-gen-src.tar.bz2 35336 RMD160 c255746bfda7e947f00d3d3bf51cbb97dcc75ba3 SHA1 351e59e3beeca8718292dfad52a59aa9827ebf91 SHA256 6a7aba336b5d40d3ff44f3a89af4f807a1011ad6c42242f2de40c794a8fbcfe8
+DIST maven-model-2.1_pre20070611.tar.bz2 24587 RMD160 4f3e37caf79c0a0d4016fa4598fbf66a0d8c68d9 SHA1 71c426c6675b36a31bda364e342c969b53d08482 SHA256 49c2f3a7d7ddc504f2f96ff5759d6fbf3c1bace2705f37f1c38c6111fed3eb0d
+EBUILD maven-model-2.1_pre20070611.ebuild 660 RMD160 374109f14ead32337d317102210582032881254d SHA1 32c3f2ad13fb279ba18e8dba3b9ef11f10e2ca68 SHA256 9b9fb5a860e76f3aedc4f5ac5e2394a3a38d61126a43cd8ba8099489221bf75d
+MISC ChangeLog 812 RMD160 83fcdb3577087984dd8f029994321a997fe4588c SHA1 e2b835bdc17f1b52727453df207bc5aa5866eedc SHA256 d142d93cd51383fea2109c6ec84c69e6b08d740f821b409449a015e2c588e65c
 MISC metadata.xml 157 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 SHA1 c37a6b9922aef61b5b3387655bccb6e3b16e0e26 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9
